force-app/main/default/objects/LOS_Details__c/LOS_Details__c.object-meta.xml
<CustomObject>
    <label>LOS Details</label>
    <nameField>
        <label>LOS Details Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>LOS Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>