force-app/main/default/objects/LOS_Details__c/fields/CPH_Deal_Owner_ID__c.field-meta.xml
<CustomField>
    <fullName>CPH_Deal_Owner_ID__c</fullName>
    <label>CPH Deal Owner ID</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>