force-app/main/default/objects/LOS_Details__c/fields/CPH_Deal_Owner_Name__c.field-meta.xml
<CustomField>
    <fullName>CPH_Deal_Owner_Name__c</fullName>
    <label>CPH Deal Owner Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>