force-app/main/default/objects/LOS_Details__c/fields/Credit_Owner_ID__c.field-meta.xml
<CustomField>
    <fullName>Credit_Owner_ID__c</fullName>
    <label>Credit Owner ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>