force-app/main/default/objects/LOS_Details__c/fields/Credit_Owner_Name__c.field-meta.xml
<CustomField>
    <fullName>Credit_Owner_Name__c</fullName>
    <label>Credit Owner Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>