force-app/main/default/objects/LOS_Details__c/fields/Deal_Creation_Time__c.field-meta.xml
<CustomField>
    <fullName>Deal_Creation_Time__c</fullName>
    <label>Deal Creation Time</label>
    <type>DateTime</type>
</CustomField>