force-app/main/default/objects/LOS_Details__c/fields/Deal_Disbursement_Amount__c.field-meta.xml
<CustomField>
    <fullName>Deal_Disbursement_Amount__c</fullName>
    <label>Deal Disbursement Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>