force-app/main/default/objects/LOS_Details__c/fields/Deal_Disbursement_Time__c.field-meta.xml
<CustomField>
    <fullName>Deal_Disbursement_Time__c</fullName>
    <label>Deal Disbursement Time</label>
    <type>DateTime</type>
</CustomField>