force-app/main/default/objects/LOS_Details__c/fields/Deal_Disbursement_Type__c.field-meta.xml
<CustomField>
    <fullName>Deal_Disbursement_Type__c</fullName>
    <label>Deal Disbursement Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>