force-app/main/default/objects/LOS_Details__c/fields/Deal_Product__c.field-meta.xml
<CustomField>
    <fullName>Deal_Product__c</fullName>
    <label>Deal Product</label>
    <length>255</length>
    <type>Text</type>
</CustomField>