force-app/main/default/objects/LOS_Details__c/fields/Deal_Rejection_Reason__c.field-meta.xml
<CustomField>
    <fullName>Deal_Rejection_Reason__c</fullName>
    <label>Deal Rejection Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>