force-app/main/default/objects/LOS_Details__c/fields/Deal_Rejection_Time__c.field-meta.xml
<CustomField>
    <fullName>Deal_Rejection_Time__c</fullName>
    <label>Deal Rejection Time</label>
    <type>DateTime</type>
</CustomField>