force-app/main/default/objects/LOS_Details__c/fields/Deal_Sanction_Amount__c.field-meta.xml
<CustomField>
    <fullName>Deal_Sanction_Amount__c</fullName>
    <label>Deal Sanction Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>