force-app/main/default/objects/LOS_Details__c/fields/Deal_Sanction_Time__c.field-meta.xml
<CustomField>
    <fullName>Deal_Sanction_Time__c</fullName>
    <label>Deal Sanction Time</label>
    <type>DateTime</type>
</CustomField>