force-app/main/default/objects/LOS_Details__c/fields/Deal_SubVariant__c.field-meta.xml
<CustomField>
    <fullName>Deal_SubVariant__c</fullName>
    <label>Deal SubVariant</label>
    <length>255</length>
    <type>Text</type>
</CustomField>