force-app/main/default/objects/LOS_Details__c/fields/Deal_Variant__c.field-meta.xml
<CustomField>
    <fullName>Deal_Variant__c</fullName>
    <label>Deal Variant</label>
    <length>255</length>
    <type>Text</type>
</CustomField>