force-app/main/default/objects/LOS_Details__c/fields/Disb_Officer_ID__c.field-meta.xml
<CustomField>
    <fullName>Disb_Officer_ID__c</fullName>
    <label>Disb Officer ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>