force-app/main/default/objects/LOS_Details__c/fields/Disb_Officer_Name__c.field-meta.xml
<CustomField>
    <fullName>Disb_Officer_Name__c</fullName>
    <label>Disb Officer Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>