force-app/main/default/objects/LOS_Details__c/fields/FTR_FTNR__c.field-meta.xml
<CustomField>
    <fullName>FTR_FTNR__c</fullName>
    <label>FTR FTNR</label>
    <length>255</length>
    <type>Text</type>
</CustomField>