force-app/main/default/objects/LOS_Details__c/fields/SF_Lead_ID__c.field-meta.xml
<CustomField>
    <fullName>SF_Lead_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SF Lead ID</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>LOS Details</relationshipLabel>
    <relationshipName>LOS_Details</relationshipName>
    <type>Lookup</type>
</CustomField>