force-app/main/default/objects/LOS_Details__c/fields/Tranches__c.field-meta.xml
<CustomField>
    <fullName>Tranches__c</fullName>
    <label>Tranches</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>